[package]
name = "advent2019"
version = "0.1.0"
authors = ["David Malinge <david.malinge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
csv = "1.1.1"
itertools = "0.8.2"
bytecount = "0.6.0"
num = "0.2.0"
regex = "1.3.1"
pathfinding = "2.0.0"
