[package]
name = "advent2019"
version = "0.1.0"
authors = ["David Malinge <david.malinge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
csv = "1.1.6"
itertools = "0.10.3"
bytecount = "0.6.3"
num = "0.4.0"
regex = "1.6.0"
pathfinding = "3.0.13"
